--- a/config.yaml
+++ b/config.yaml
@@ -40,8 +40,8 @@ track_thresh: 0.8  # Detection confidence threshold for tracking
 nms_iou_thresh_det: 0.45
 iou_thresh: 0.2  # IOU threshold for SORT matching
 min_hits: 6  # Minimum hits to create track in SORT
-inertia: 0.4  # Weight of VDC term in cost matrix
-deltat: 1.5  # Time step difference to estimate direction
+inertia: 0.4  # Weight of VDC term in cost matrix - 0.4
+deltat: 1  # Time step difference to estimate direction
 track_buffer: 60  # Frames for keeping lost tracks
 match_thresh: 0.85  # Matching threshold for tracking
 min-box-area: 150  # Filter out tiny boxes
