--- a/config.yaml
+++ b/config.yaml
@@ -37,13 +37,14 @@ seed: null  # Evaluation seed (optional)
 
 # Tracking Parameters
 track_thresh: 0.85  # Detection confidence threshold for tracking
-nms_iou_thresh_det: 0.4
+nms_iou_thresh_det: 0.60
+lower_bound_det_threshold: 0.5
 iou_thresh: 0.2  # IOU threshold for SORT matching
 min_hits: 5  # Minimum hits to create track in SORT
 inertia: 0.4  # Weight of VDC term in cost matrix - 0.4
 deltat: 1  # Time step difference to estimate direction
 track_buffer: 60  # Frames for keeping lost tracks
-max_exist: 1001
+max_exist: 3001
 match_thresh: 0.85  # Matching threshold for tracking
 min-box-area: 150  # Filter out tiny boxes
 gt-type: "_val_half"  # Suffix for ground truth annotation
