fix: Add confidence weight into association method.
Compliment existing tracks with higher confidence of last observed box when matching with detection.

--- a/config.yaml
+++ b/config.yaml
@@ -39,10 +39,10 @@ nms_iou_thresh_det: 0.60
 lower_bound_det_threshold: 0.5
 iou_thresh: 0.2  # IOU threshold for SORT matching
 min_hits: 5  # Minimum hits to create track in SORT
-inertia: 0.4  # Weight of VDC term in cost matrix - 0.4
+inertia: 0.2  # Weight of VDC term in cost matrix - 0.4
 deltat: 1  # Time step difference to estimate direction
-track_buffer: 60  # Frames for keeping lost tracks
-max_exist: 3001
+track_buffer: 30  # Frames for keeping lost tracks
+max_exist: 1801
 match_thresh: 0.85  # Matching threshold for tracking
 min-box-area: 150  # Filter out tiny boxes
 gt-type: "_val_half"  # Suffix for ground truth annotation
@@ -66,6 +66,8 @@ aspect_ratio_thresh: 1.5  # Threshold for filtering boxes with aspect ratio abov
 min_box_area: 8  # Filter out tiny boxes
 device: "gpu"  # Device to run the model (cpu or gpu)
 
-detection_data: "C:/transmetric/dev/python/AI_camera/output/detections/manningham/saved_raw_detections/20230726_150000/20230726_150000_2025_0113_172820_raw_detection"
-output: "C:/transmetric/dev/python/AI_camera/output/tracks/manningham/no"
+detection_data: "C:/transmetric/dev/python/AI_camera/output/detections/manningham/saved_raw_detections/20230725_150000/20230725_150000_2025_0113_142513_raw_detection"
+output: "C:/transmetric/dev/python/AI_camera/trial/OC_Sort_tracker/tracks/067-00007_Wed_Thur_27hrs_1500/2024_1204_154045_002A"
+
+res: "C:/transmetric/dev/python/AI_camera/output/tracks/manningham/v2"
 
